Added CSS Sheet

--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
   </head>
   <body>
     <div class="container">
-        <div class="row">
+        <div class="row row1">
            <div class="col-lg-12" align="center">
            <h2>Richard Mazel</h2>
            </div>
+        </div>
+        <div class="row">
+           <div class="col-lg-4">
+           </div> 
+           <div class="col-lg-4" align="center">
+               <h4>About Portfolio Bootstrap</h4>
+           </div>    
+           <div class="col-lg-4">
+           </div>   
         </div>
 
 
