fixed header and nav bar

--- a/index.html
+++ b/index.html
@@ -12,26 +12,47 @@
         integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color:lightgray">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 name"></div>
-            <div class="col-lg-6 name center">
-                <h2>Richard Mazel</h2>
+            <div class="col-lg-3"></div>
+            <div class="col-lg-6 name text">
+                <h2 >Richard Mazel</h2>
             </div>
-            <div class="col-lg-3 name"></div>
+            <div class="col-lg-3"></div>
+        </div>
+    </div>
+        
         <div class="container">
             <div class="row">
                 <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <ul>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
+                <div class="col-md-2 form-inline content">
+                    <span class="align-right"></span>
+                    <h7 class="text-left">About</h7>
+                </div>
+                <div class="col-md-2 form-inline content">
+                    <span class="align-middle"></span>
+                    <h7 class="text-middle">Contact</h7>
+                </div>
+                <div class="col-md-2 form-inline content">
+                    <span class="align-left"></span>
+                    <h7 class="text-right">Portfolio</h7>
                 </div>
                 <div class="col-md-3"></div>
             </div>
+        </div>
+        
+        <div class="container">
+            <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6 divider"></div>
+                    <div class="col-md-3"></div>
+            </div>
+        </div>
+        </div>
+
+
+        </div>
         </div>
 
 
