finished about page and contact page. Stopped on protfolio page. Need to fix footer

--- a/index.html
+++ b/index.html
@@ -26,20 +26,19 @@
         <!-- nav bar-->
         <div class="container"  style="width: 100%">
             <div class="row" style="height: 50px">
-                <div class="col-md-4"  style="background-color: white"></div>
-                <div class="col-md-1 form-inline content" style="background-color: white">
-                    <h7 class="text-left">About</h7>
+                <div class="col-md-3"  style="background-color: white"></div>
+                <div class="col-md-2 form-inline content" style="background-color: white">
+                    <h3 class="text-left" style="color: lightgrey">About</h3>
                 </div>
-                <div class="col-md-1 form-inline content" style="background-color: white">
+                <div class="col-md-2 form-inline content" style="background-color: white">
                     <span class="align-middle"></span>
-                    <h7 class="text-middle">Contact</h7>
+                    <h3 class="text-middle" style="color: lightgrey">Contact</h3>
                 </div>
-                <div class="col-md-1 form-inline content" style="background-color: white">
+                <div class="col-md-2 form-inline content" style="background-color: white">
                     <span class="align-left"></span>
-                    <h7 class="text-right">Portfolio</h7>
+                    <h3 class="text-right" style="color: lightgrey">Portfolio</h3>
                 </div>
-                <div class="col-md-1 form-inline content" style="background-color: white"></div>
-                <div class="col-md-4"  style="background-color: white"></div>
+                <div class="col-md-3" style="background-color: white"></div>
             </div>
         </div>
         
@@ -60,7 +59,7 @@
                 <div class="col-md-1" style="background-color:lightgray"></div>
                 <div class="col-md-1" style="background-color:white"></div>
                 <div class="col-md-8" style="background-color:white">
-                    <h3 style="color:lightseagreen">About Me</h3>
+                    <h1 style="color:lightseagreen">About My Favorite Band</h1>
                 </div>
                 <div class="col-md-1" style="background-color:white"></div>
                 <div class="col-md-1" style="background-color:lightgray"></div>
@@ -81,19 +80,41 @@
             <div class="row" style="height: 80%">
                 <div class="col-md-1" style="background-color:lightgrey"></div>
                 <div class="col-md-10" style="background-color:white">
-                    <img src="http://epitaph.com/media/artists/Descendents_Logo.jpg.928x0_q90.jpg" alt="landscape" style="width:90%" style="height:10%">
+                    <img src="http://epitaph.com/media/artists/Descendents_Logo.jpg.928x0_q90.jpg" alt="Descendents" style="width:100%" style="height:10%">
                 </div>
                 <div class="col-md-1" style="background-color:lightgrey"></div>
             </div>
         </div>
         <!--Content-->
         <div class="container" style="width:1125px">
-            <div class="row" style="height:400px">
+            <div class="row" style="height:300px">
                 <div class="col-md-1" style="background-color:white"></div>
-                <div class="col-md-10" style="background-color: white"></div>
+                <div class="col-md-10" style="background-color: white">
+                <p style="color:black">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic eius nam molestiae possimus corrupti, sunt dolorum
+                                         laboriosam inventore cum quos officiis officia perspiciatis qui deserunt. Perspiciatis iste doloremque quos praesentium?
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste illo impedit qui eligendi, amet esse rem adipisci fugiat, 
+                                        libero quisquam nesciunt inventore nostrum itaque quo magni veritatis id sit incidunt. Lorem ipsum dolor sit amet 
+                                        consectetur, adipisicing elit. Ea quaerat quos culpa ipsa nam optio, deserunt unde reprehenderit eius iusto vitae. Incidunt dolorum nam modi unde animi cum sed autem.
+                                        </p>
+                </div>
                 <div class="col-md-1" style="background-color:white"></div>
             </div>
         </div>
+        <!--line between content and footer-->
+        <div class="container" style="width:100%">
+            <div class="row" style="height:10px">
+                <div class="col-md-1" style="background-color:lightgray"></div>
+                <div class="col-md-10" style="background-color:lightseagreen"></div>
+                <div class="col-md-1" style="background-color:lightgray"></div>
+            </div>
+        </div>
+        <div class="container" style="width:100%">
+                <div class="row" style="height:100px">
+                    <div class="col-md-1" style="background-color:lightgray"></div>
+                    <div class="col-md-10" style="background-color:darkgray"></div>
+                    <div class="col-md-1" style="background-color:lightgray"></div>
+                </div>
+            </div>
         
 
 
