--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
             <div class="col-md-1" style="background-color:lightgray"></div>
             <div class="col-md-1" style="background-color:white"></div>
             <div class="col-md-8" style="background-color:white">
-                <h1 style="color:lightseagreen">Contact Us</h1>
+                <h1 style="color:lightseagreen">Contact</h1>
             </div>
             <div class="col-md-1" style="background-color:white"></div>
             <div class="col-md-1" style="background-color:lightgray"></div>
@@ -78,7 +78,7 @@
             </div>
         </div>
     </div>
-    <!--image-->
+    <!--contact form-->
     <div class="container" style="width:100%">
         <div class="row" style="height: 500px">
             <div class="col-md-1" style="background-color:lightgray"></div>
