Need to add tags to the pics on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
             <div class="col-md-1" style="background-color:lightgray"></div>
             <div class="col-md-1" style="background-color:white"></div>
             <div class="col-md-8" style="background-color:white">
-                <h1 style="color:lightseagreen">Contact Us</h1>
+                <h1 style="color:lightseagreen">Portfolio</h1>
             </div>
             <div class="col-md-1" style="background-color:white"></div>
             <div class="col-md-1" style="background-color:lightgray"></div>
@@ -81,39 +81,62 @@
         </div>
     </div>
     <!--image-->
-    <div class="container" style="width:100%">
-            <div class="row" style="height: 125px">
+    <div class="container" style="width:100%" class="box-align: center">
+        <div class="row" style="height: 500px">
+            <div class="col-md-1" style="background-color:lightgray"></div>
+            <div class="col-md-1" style="background-color: white"></div>
+            <div class="col-md-8" style="background-color: white">
+                <img src="https://pbs.twimg.com/media/EAelzzmXkAA4LI3.jpg" class="align-middle" alt="Live" style="width:400px" style="height:400px">
+            </div>
+            <div class="col-md-1" style="background-color: white"></div>
+            <div class="col-md-1" style="background-color:lightgray"></div>
+        </div>
+    </div>
+    <!--image2-->
+    <div class="container" style="width:100%" class="box-align: center">
+            <div class="row" style="height: 500px">
                 <div class="col-md-1" style="background-color:lightgray"></div>
                 <div class="col-md-1" style="background-color: white"></div>
-                <div class="col-md-8" style="background-color: white"></div>  
+                <div class="col-md-8" style="background-color: white">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/61o%2BkQv7y3L._SL1001_.jpg" class="align-middle" alt="Live" style="width:400px" style="height:400px">
+                </div>
                 <div class="col-md-1" style="background-color: white"></div>
-                <div class="col-md-1" style="background-color:lightgray"></div>    
+                <div class="col-md-1" style="background-color:lightgray"></div>
+            </div>
     </div>
-
-    <!--line between content and footer-->
-    <div class="container" style="width:100%">
-        <div class="row" style="height:10px">
-            <div class="col-md-1" style="background-color:lightgray"></div>
-            <div class="col-md-1" style="background-color:lightseagreen"></div>
-            <div class="col-md-8" style="background-color:lightseagreen"></div>
-            <div class="col-md-1" style="background-color:lightseagreen"></div>
-            <div class="col-md-1" style="background-color:lightgray"></div>
+    <!--image3-->
+    <div class="container" style="width:100%" class="box-align: center">
+            <div class="row" style="height: 500px">
+                <div class="col-md-1" style="background-color:lightgray"></div>
+                <div class="col-md-1" style="background-color: white"></div>
+                <div class="col-md-8" style="background-color: white">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfoY5G3EBxpfLdVFU4SEAAPrphcGEltdGg6HqtZ3b05HD41scj" class="align-middle" alt="Live" style="width:400px" style="height:400px">
+                </div>
+                <div class="col-md-1" style="background-color: white"></div>
+                <div class="col-md-1" style="background-color:lightgray"></div>
+            </div>
         </div>
-    </div>
-    <!--footer-->
-    <div class="container" style="width:1500px">
-        <div class="row" style="height:75px">
-            <div class="col-md-1" style="background-color:lightgray"></div>
-            <div class="col-md-1" style="background-color:darkgray"></div>
-            <div class="col-md-8" style="background-color:darkgray"></div>
-            <div class="col-md-1" style="background-color:darkgray"></div>
-            <div class="col-md-1" style="background-color:lightgray"></div>
+
+        <!--line between content and footer-->
+        <div class="container" style="width:100%">
+            <div class="row" style="height:10px">
+                <div class="col-md-1" style="background-color:lightgray"></div>
+                <div class="col-md-10" style="background-color:lightseagreen"></div>
+                <div class="col-md-1" style="background-color:lightgray"></div>
+            </div>
         </div>
-    </div>
-    </div>
-
-
+        <div class="container" style="width:100%">
+            <div class="row" style="height:100px">
+                <div class="col-md-1" style="background-color:lightgray"></div>
+                <div class="col-md-10" style="background-color:darkgray"></div>
+                <div class="col-md-1" style="background-color:lightgray"></div>
+            </div>
+        </div>
     
+
+
+
+
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
@@ -122,5 +145,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
         integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous">
     </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-        integrity="sha384
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384
