Finished as far as I could get on Homework.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container" style="width: 100%">
         <div class="row" style="height: 75px">
             <div class="col-md-4" style="background-color: lightseagreen"></div>
-            <div class="col-md-4" style="background-color: lightseagreen">
+            <div class="col-md-4 text-center" style="background-color: lightseagreen">
                 <h2>Richard Mazel</h2>
             </div>
             <div class="col-md-4" style="background-color: lightseagreen"></div>
@@ -29,15 +29,15 @@
         <div class="row" style="height: 50px">
             <div class="col-md-3" style="background-color: white"></div>
             <div class="col-md-2 form-inline content" style="background-color: white">
-                <h3 class="text-left" style="color: lightgrey">About</h3>
+                <h3 class="text-left" style="color: lightgrey"><a href="About.html">About</a></h3>
             </div>
             <div class="col-md-2 form-inline content" style="background-color: white">
                 <span class="align-middle"></span>
-                <h3 class="text-middle" style="color: lightgrey">Contact</h3>
+                <h3 class="text-middle" style="color: lightgrey"><a href="Contact.html">Contact</a></h3>
             </div>
             <div class="col-md-2 form-inline content" style="background-color: white">
                 <span class="align-left"></span>
-                <h3 class="text-right" style="color: lightgrey">Portfolio</h3>
+                <h3 class="text-right" style="color: lightgrey"><a href="Portfolio.html">Portfolio</a></h3>
             </div>
             <div class="col-md-3" style="background-color: white"></div>
         </div>
