--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
 </head>
 <!--name-->
 
+</head>
 <body style="background-color:lightgray" style="width:80%">
     <div class="container" style="width: 100%">
         <div class="row" style="height: 75px">
@@ -29,15 +30,15 @@
         <div class="row" style="height: 50px">
             <div class="col-md-3" style="background-color: white"></div>
             <div class="col-md-2 form-inline content" style="background-color: white">
-                <h3 class="text-left" style="color: lightgrey">About</h3>
+                <h3 class="text-left" style="color: lightgrey"><a href="About.html">About</a></h3>
             </div>
             <div class="col-md-2 form-inline content" style="background-color: white">
                 <span class="align-middle"></span>
-                <h3 class="text-middle" style="color: lightgrey">Contact</h3>
+                <h3 class="text-middle" style="color: lightgrey"><a href="About.html">Contact</a></h3>
             </div>
             <div class="col-md-2 form-inline content" style="background-color: white">
                 <span class="align-left"></span>
-                <h3 class="text-right" style="color: lightgrey">Portfolio</h3>
+                <h3 class="text-right" style="color: lightgrey"><a href="About.html">Portfolio</a></h3>
             </div>
             <div class="col-md-3" style="background-color: white"></div>
         </div>
@@ -81,24 +82,24 @@
         </div>
     </div>
     <!--image-->
-    <div class="container" style="width:100%" class="box-align: center">
+    <div class="container seperator" style="width:100%" class="box-align: center">
         <div class="row" style="height: 500px">
             <div class="col-md-1" style="background-color:lightgray"></div>
             <div class="col-md-1" style="background-color: white"></div>
-            <div class="col-md-8" style="background-color: white">
-                <img src="https://pbs.twimg.com/media/EAelzzmXkAA4LI3.jpg" class="align-middle" alt="Live" style="width:400px" style="height:400px">
+            <div class="col-md-8 text-center" style="background-color: white">
+                <img src="https://pbs.twimg.com/media/EAelzzmXkAA4LI3.jpg" class="align-middle" alt="Live" style="width:500px" style="height:500px">
             </div>
             <div class="col-md-1" style="background-color: white"></div>
             <div class="col-md-1" style="background-color:lightgray"></div>
         </div>
     </div>
     <!--image2-->
-    <div class="container" style="width:100%" class="box-align: center">
+    <div class="container  margin-top:50px" style="width:100%">
             <div class="row" style="height: 500px">
                 <div class="col-md-1" style="background-color:lightgray"></div>
                 <div class="col-md-1" style="background-color: white"></div>
-                <div class="col-md-8" style="background-color: white">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/61o%2BkQv7y3L._SL1001_.jpg" class="align-middle" alt="Live" style="width:400px" style="height:400px">
+                <div class="col-md-8 text-center" style="background-color: white">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/61o%2BkQv7y3L._SL1001_.jpg" class="align-middle" alt="Live" style="width:500px" style="height:500px">
                 </div>
                 <div class="col-md-1" style="background-color: white"></div>
                 <div class="col-md-1" style="background-color:lightgray"></div>
@@ -109,8 +110,8 @@
             <div class="row" style="height: 500px">
                 <div class="col-md-1" style="background-color:lightgray"></div>
                 <div class="col-md-1" style="background-color: white"></div>
-                <div class="col-md-8" style="background-color: white">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfoY5G3EBxpfLdVFU4SEAAPrphcGEltdGg6HqtZ3b05HD41scj" class="align-middle" alt="Live" style="width:400px" style="height:400px">
+                <div class="col-md-8 text-center" style="background-color: white">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfoY5G3EBxpfLdVFU4SEAAPrphcGEltdGg6HqtZ3b05HD41scj" class="align-middle" alt="Live" style="width:500px" style="height:500px">
                 </div>
                 <div class="col-md-1" style="background-color: white"></div>
                 <div class="col-md-1" style="background-color:lightgray"></div>
