--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,11 @@
             </div>
             <div class="col-md-2 form-inline content" style="background-color: white">
                 <span class="align-middle"></span>
-                <h3 class="text-middle" style="color: lightgrey"><a href="About.html">Contact</a></h3>
+                <h3 class="text-middle" style="color: lightgrey"><a href="Contact.html">Contact</a></h3>
             </div>
             <div class="col-md-2 form-inline content" style="background-color: white">
                 <span class="align-left"></span>
-                <h3 class="text-right" style="color: lightgrey"><a href="About.html">Portfolio</a></h3>
+                <h3 class="text-right" style="color: lightgrey"><a href="Portfolio.html">Portfolio</a></h3>
             </div>
             <div class="col-md-3" style="background-color: white"></div>
         </div>
