--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col-md-2 form-inline content" style="background-color: white">
                 <span class="align-middle"></span>
-                <h3 class="text-middle" style="color: lightgrey"><a href="Contact.html">Contact</a></h3>
+                <h3 class="text-middle" style="color: lightgrey"><a href="https://github.com/richardmmy28/Bootstrap-Portfolio/contact.html">Contact</a></h3>
             </div>
             <div class="col-md-2 form-inline content" style="background-color: white">
                 <span class="align-left"></span>
