--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <div class="row" style="height: 50px">
             <div class="col-md-3" style="background-color: white"></div>
             <div class="col-md-2 form-inline content" style="background-color: white">
-                <h3 class="text-left" style="color: lightgrey"><a href="About.html">About</a></h3>
+                <h3 class="text-left" style="color: lightgrey"><a href="./About.html">About</a></h3>
             </div>
             <div class="col-md-2 form-inline content" style="background-color: white">
                 <span class="align-middle"></span>
-                <h3 class="text-middle" style="color: lightgrey"><a href="https://github.com/richardmmy28/Bootstrap-Portfolio/contact.html">Contact</a></h3>
+                <h3 class="text-middle" style="color: lightgrey"><a href="./contact.html">Contact</a></h3>
             </div>
             <div class="col-md-2 form-inline content" style="background-color: white">
                 <span class="align-left"></span>
-                <h3 class="text-right" style="color: lightgrey"><a href="Portfolio.html">Portfolio</a></h3>
+                <h3 class="text-right" style="color: lightgrey"><a href="./Portfolio.html">Portfolio</a></h3>
             </div>
             <div class="col-md-3" style="background-color: white"></div>
         </div>
